🔧 chore(collector): MarketCalendarRefreshScheduler PMD 위반 수정